fix(report): stop description from stretching its container
related to OPT-7041

--- a/client/src/components/Reports/Report.scss
+++ b/client/src/components/Reports/Report.scss
@@ -57,12 +57,14 @@
   .head {
     display: flex;
     flex-grow: 1;
+    min-width: 0;
 
     .info {
       display: flex;
       flex-direction: column;
       overflow: hidden;
       flex-grow: 1;
+      min-width: 0;
     }
   }
 
